redactable/tests/ui/not_sensitive_display_requires_display.stderr
error[E0277]: `NoDisplay` doesn't implement `std::fmt::Display`
 --> tests/ui/not_sensitive_display_requires_display.rs:8:20
  |
8 |     require_output(&NotSensitiveDisplay(NoDisplay));
  |     -------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |     |
  |     required by a bound introduced by this call
  |
help: the trait `std::fmt::Display` is not implemented for `NoDisplay`
 --> tests/ui/not_sensitive_display_requires_display.rs:3:1
  |
3 | struct NoDisplay;
  | ^^^^^^^^^^^^^^^^
help: the trait `ToRedactedOutput` is implemented for `NotSensitiveDisplay<T>`
 --> src/redaction/escape_hatches.rs
  |
  | / impl<T> ToRedactedOutput for NotSensitiveDisplay<T>
  | | where
  | |     T: std::fmt::Display,
  | |_________________________^
  = note: required for `NotSensitiveDisplay<NoDisplay>` to implement `ToRedactedOutput`
note: required by a bound in `require_output`
 --> tests/ui/not_sensitive_display_requires_display.rs:5:22
  |
5 | fn require_output<T: ToRedactedOutput>(_: &T) {}
  |                      ^^^^^^^^^^^^^^^^ required by this bound in `require_output`
